src/test/deca/context/invalid/protected-notSubType.context
protected-notSubType.deca:8:
